Revert "Attempting to fix layout issue on mobile."
This reverts commit f6a8af7661955c2d818643df32231e9ed69c1772.

--- a/css/app.css
+++ b/css/app.css
@@ -12,7 +12,7 @@ main {
   width: 100%;
 }
 
-p {
+header {
   color: white;
   font-family: sans-serif;
   font-size: xx-large;
